--- a/wsdemo/index.html
+++ b/wsdemo/index.html
@@ -71,7 +71,8 @@
             var registryWriteJson = {
                 "Message":"Control",
                 "Command":"Toggle",
-                "Channel":channelNumber
+                "Channel":channelNumber,
+                "Duration": 5000
             };
 
             // registryWriteJson.Keys["IO/Inputs/din" + channelNumber + "/Inversion"] = checkbox.checked.toString();
